Bug fixed - bottom not reached if block is too small.

--- a/src/scss/jquery.trackrails.scss
+++ b/src/scss/jquery.trackrails.scss
@@ -1,76 +1,79 @@
-$rails-size: 16px;
+.jq-trackrails {
 
-@keyframes fadeIn {
-  from {
-    opacity: 0.6;
-  }
-  to {
-    opacity: 1;
-  }
-}
+  $rails-size: 16px;
 
-.hover {
-  animation-name: fadeIn;
-  animation-duration: 0.5s;
-  animation-iteration-count: 1;
-  animation-fill-mode: forwards;
-}
-
-.track {
-  position: fixed;
-  right: 2%;
-  bottom: 10%;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  width: 100px;
-
-  div, span {
-    font-size: 11pt;
+  @keyframes jq-trackrails-fadeIn {
+    from {
+      opacity: 0.6;
+    }
+    to {
+      opacity: 1;
+    }
   }
 
-  &.track-debug{
-    background-color: #54ad00;
-    border: 1px solid #999;
-    border-radius: 4px;
-    padding: 5px;
-  }
-
-  > div:hover {
-    animation-name: fadeIn;
+  &.hover {
+    animation-name: jq-trackrails-fadeIn;
     animation-duration: 0.5s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
   }
 
-  > div[rails-ref] {
+  &.track {
+    position: fixed;
+    right: 2%;
+    bottom: 10%;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #fff;
-    border-radius: 50%;
-    width: $rails-size;
-    height: $rails-size;
-    opacity: 0.6;
-    cursor: pointer;
-    margin-top: 8px;
+    align-items: flex-end;
+    width: 100px;
 
-    span {
-      color: rgb(90, 90, 90);
+    div, span {
+      font-size: 11pt;
+    }
+
+    &.track-debug{
+      background-color: #54ad00;
+      border: 1px solid #999;
+      border-radius: 4px;
+      padding: 5px;
+    }
+
+    > div:hover {
+      animation-name: jq-trackrails-fadeIn;
+      animation-duration: 0.5s;
+      animation-iteration-count: 1;
+      animation-fill-mode: forwards;
+    }
+
+    > div[rails-ref] {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      background-color: #fff;
+      border-radius: 50%;
+      width: $rails-size;
+      height: $rails-size;
+      opacity: 0.6;
+      cursor: pointer;
+      margin-top: 8px;
+
+      span {
+        color: rgb(90, 90, 90);
+      }
     }
   }
-}
 
-.rails-hints {
-  position: relative;
-  font-size: 10pt;
-  color: rgb(60, 60, 60);
-  opacity: 0;
-  text-align: right;
-  // width: inherit;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  margin-top: 8px;
+  &.rails-hints {
+    position: relative;
+    font-size: 10pt;
+    color: rgb(60, 60, 60);
+    opacity: 0;
+    text-align: right;
+    // width: inherit;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin-top: 8px;
+  }
 }
